# ur_project_ros2

./: .gitignore  .gitmodules  README.md
src/robot_setup/dual_ur_robotiq_rs_description/: CMakeLists.txt  package.xml
src/robot_setup/dual_ur_robotiq_rs_description/config/: base_frame.yaml  controllers.yaml
src/robot_setup/dual_ur_robotiq_rs_description/include/dual_ur_robotiq_rs_description/: dual_ur_robotiq_rs_node.h
src/robot_setup/dual_ur_robotiq_rs_description/launch/: dual_ur_robotiq_rs.launch.py  dual_ur_robotiq_rs_planning.launch.py  view_dual_ur_robotiq_rs.launch.py
src/robot_setup/dual_ur_robotiq_rs_description/moveit2/: joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml
src/robot_setup/dual_ur_robotiq_rs_description/rviz/: dual_ur_robotiq_rs.rviz
src/robot_setup/dual_ur_robotiq_rs_description/src/: dual_ur_robotiq_rs_node.cpp
src/robot_setup/dual_ur_robotiq_rs_description/srdf/: dual_ur_robotiq_rs.srdf.xacro  test.srdf
src/robot_setup/dual_ur_robotiq_rs_description/urdf/: dual_ur_robotiq_rs.urdf.xacro  test.urdf
src/robot_setup/ur_ft_description/: CMakeLists.txt  package.xml
src/robot_setup/ur_ft_description/config/: base_frame.yaml  controllers.yaml
src/robot_setup/ur_ft_description/include/ur_ft_description/: ur_ft_node.h
src/robot_setup/ur_ft_description/launch/: remove_comments.py  ur_ft.launch.py  ur_ft_planning.launch.py
src/robot_setup/ur_ft_description/moveit2/: joint_limits.yaml
src/robot_setup/ur_ft_description/rviz/: ur_ft.rviz
src/robot_setup/ur_ft_description/src/: ur_ft_node.cpp
src/robot_setup/ur_ft_description/srdf/: test.srdf  ur_ft.srdf.xacro  ur_ft_macro.srdf.xacro
src/robot_setup/ur_ft_description/urdf/: test.urdf  ur_ft.urdf.xacro  ur_ft_macro.urdf.xacro
src/robot_setup/ur_robotiq_rs/: CMakeLists.txt  package.xml
src/robot_setup/ur_robotiq_rs_description/: CMakeLists.txt  package.xml
src/robot_setup/ur_robotiq_rs_description/config/: base_frame.yaml  controllers.yaml  initial_positions.yaml
src/robot_setup/ur_robotiq_rs_description/gazebo/: empty.world
src/robot_setup/ur_robotiq_rs_description/include/ur_robotiq_rs_description/: ur_robotiq_rs_node.h
src/robot_setup/ur_robotiq_rs_description/launch/: ur_robotiq_rs.launch.py  ur_robotiq_rs_planning.launch.py  view_ur_robotiq_rs.launch.py
src/robot_setup/ur_robotiq_rs_description/moveit2/: cartesian_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml  planning_pipelines_config.yaml
src/robot_setup/ur_robotiq_rs_description/rviz/: ur_robotiq_rs.rviz
src/robot_setup/ur_robotiq_rs_description/src/: ur_robotiq_rs_node.cpp
src/robot_setup/ur_robotiq_rs_description/srdf/: test.srdf  ur_robotiq_rs.srdf.xacro  ur_robotiq_rs_macro.srdf.xacro
src/robot_setup/ur_robotiq_rs_description/urdf/: realsense_d435.gazebo.xacro  realsense_d435.urdf.xacro  test.urdf  ur_robotiq_rs.urdf.xacro  ur_robotiq_rs_macro.urdf.xacro
src/tasks/dual_plan/: CMakeLists.txt  package.xml
src/tasks/dual_plan/config/: left_initial_positions.yaml
src/tasks/dual_plan/launch/: bringup.launch.py  dual_plan.launch.py
src/tasks/dual_plan/rviz/: dual_plan.rviz
src/tasks/dual_plan/src/: dual_plan.cpp
src/tasks/find_hole/: CMakeLists.txt  package.xml
src/tasks/find_hole/config/: base_frame.yaml
src/tasks/find_hole/gazebo/: sim_env.world
src/tasks/find_hole/gazebo/table_with_hole/: model.config  model.sdf
src/tasks/find_hole/gazebo/table_with_hole/meshes/: table_with_hole.stl
src/tasks/find_hole/launch/: bringup.launch.py  find_hole.launch.py
src/tasks/find_hole/rviz/: find_hole.rviz
src/tasks/find_hole/src/: find_hole.cpp
src/tasks/pick_and_place/: CMakeLists.txt  package.xml
src/tasks/pick_and_place/config/: base_frame.yaml  target_pose_list.yaml
src/tasks/pick_and_place/gazebo/: sim_env.world
src/tasks/pick_and_place/launch/: bringup.launch.py  pick_and_place.launch.py
src/tasks/pick_and_place/src/: pick_and_place.cpp
