<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dual_plan</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zitongbai@outlook.com">xiaobaige</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_common</depend>
  <depend>moveit_ros_planning</depend>
  <depend>tf2</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>control_msgs</depend>
  <depend>dual_ur_robotiq_rs_description</depend>
  <depend>moveit_visual_tools</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
