<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>find_hole</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="zitongbai@outlook.com">xiaobaige</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

    <depend>rclcpp</depend>
    <depend>moveit_core</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>moveit_common</depend>
    <depend>moveit_ros_planning</depend>
    <depend>tf2</depend>
    <depend>rclcpp_action</depend>
    <depend>rclcpp_components</depend>
    <depend>control_msgs</depend>
    <depend>ur_ft_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- gazebo_ros_paths_plugin automatically adds these to
    GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
    the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <!-- https://answers.gazebosim.org/question/6568/uri-paths-to-packages-in-the-sdf-model-file/ -->
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.." /> 
  </export>
</package>
